<resources>
    <string name="app_name">My A</string>
    <string name="chat">CHAT</string>
    <string name="CHAT">CHAT</string>
    <string name="STATUS">STATUS</string>
    <string name="CALLS">CALLS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="hallo">hallo</string>
    <string name="_11hrs">11hrs</string>
    <string name="_30minutes_ago">30minutes ago</string>
    <string name="new_group">new group</string>
    <string name="start_message">start message</string>
    <string name="linked_devices">linked devices</string>
    <string name="logout">logout</string>
    <string name="settings">settings</string>
    <string name="new_broadcast">new broadcast</string>
    <string name="search">search</string>
    <string name="verify_by_phone_number">Verify By phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_code">Send code</string>
    <string name="verify">verify</string>
    <string name="introducing_communities_easily_organize_your_related_groups_and_send_announcements_now_your_communities_like_neighborhoods_or_schools_can_have_their_own_space">Introducing communities Easily organize your related groups and send announcements. Now, your communities, like neighborhoods or schools, can have their own space.</string>
    <string name="introduction_communities_easily_organize_your_related_groups_and_send_announcements_now_your_communities_like_neighborhoods_or_schools_can_have_their_own_space">introduction communities Easily organize your related groups and send announcements. Now, your communities, like neighborhoods or schools, can have their own space.</string>
    <string name="online">Online</string>
    <string name="start_typing">Start Typing</string>
    <string name="delivered">Delivered</string>
    <string name="sahar">sahar</string>
</resources>