<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search"
        android:icon="@drawable/icon_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/group_btn"
        android:title="@string/new_group"/>

    <item
        android:id="@+id/new_btn"
        android:title="@string/new_broadcast"/>

    <item
        android:id="@+id/linked_btn"
        android:title="@string/linked_devices"/>

    <item
        android:id="@+id/starred_message_btn"
        android:title="@string/start_message"/>

    <item
        android:id="@+id/setting_btn"
        android:title="@string/settings"/>







</menu>