<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bebe"
    tools:context=".ChattActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/too_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_keyboard_return_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profiletv"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/tt"
                app:civ_circle_background_color="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="InefficientWeight">

                <TextView
                    android:id="@+id/nameptv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sahar"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/onlinetv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/online"
                    android:textColor="@color/white"
                    android:textStyle="italic" />

            </LinearLayout>

            <ImageView
                android:id="@+id/block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_baseline_videocam_24"
                android:contentDescription="TODO" />
            <ImageView
                android:id="@+id/block1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_baseline_local_phone_24" />
            <ImageView
                android:id="@+id/block2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/_5sdp"
                android:src="@drawable/ic_menue_more_vert_24"
                tools:ignore="ContentDescription" />


        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_chatrecycle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/too_bar"
        app:layout_constraintBottom_toTopOf="@id/messaget"/>


    <EditText
        android:id="@+id/messaget"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:hint="@string/start_typing"
        android:drawableStart="@drawable/ic_baseline_insert_emoticon_24"
        android:drawableEnd="@drawable/icon_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sendmsg"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageButton
        android:id="@+id/sendmsg"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="172dp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/background_send"
        android:elevation="@dimen/_10sdp"
        android:src="@drawable/icon_message_send_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>